@@ -451,10 +451,17 @@ _evas_image_load_frame_image_data(Eina_File *f,
                                    }
                                  else
                                    {
-                                      r = cmap->Colors[rows[i1][j1 * scale_ratio]].Red;
-                                      g = cmap->Colors[rows[i1][j1 * scale_ratio]].Green;
-                                      b = cmap->Colors[rows[i1][j1 * scale_ratio]].Blue;
-                                      *ptr++ = ARGB_JOIN(0xff, r, g, b);
+                                      if (rows[i][j * scale_ratio] == alpha)
+                                        {
+                                           ptr++ ;
+                                        }
+                                      else
+                                        {
+                                           r = cmap->Colors[rows[i1][j1 * scale_ratio]].Red;
+                                           g = cmap->Colors[rows[i1][j1 * scale_ratio]].Green;
+                                           b = cmap->Colors[rows[i1][j1 * scale_ratio]].Blue;
+                                           *ptr++ = ARGB_JOIN(0xff, r, g, b);
+                                        }
                                    }
                               }
                          }
@@ -488,10 +495,17 @@ _evas_image_load_frame_image_data(Eina_File *f,
                                     }
                                   else
                                     {
-                                       r = cmap->Colors[rows[i1][j1 * scale_ratio]].Red;
-                                       g = cmap->Colors[rows[i1][j1 * scale_ratio]].Green;
-                                       b = cmap->Colors[rows[i1][j1 * scale_ratio]].Blue;
-                                       *ptr++ = ARGB_JOIN(0xff, r, g, b);
+                                      if (rows[i][j * scale_ratio] == alpha)
+                                        {
+                                           ptr++ ;
+                                        }
+                                      else
+                                        {
+                                           r = cmap->Colors[rows[i1][j1 * scale_ratio]].Red;
+                                           g = cmap->Colors[rows[i1][j1 * scale_ratio]].Green;
+                                           b = cmap->Colors[rows[i1][j1 * scale_ratio]].Blue;
+                                           *ptr++ = ARGB_JOIN(0xff, r, g, b);
+                                        }
                                     }
                                }
                           }
@@ -538,7 +552,7 @@ _evas_image_load_frame_image_data(Eina_File *f,
                          }
                        else
                          {
-                            if (rows[i1][j1] == alpha)
+                            if (rows[i1][j1 * scale_ratio] == alpha)
                               {
                                  ptr++;
                               }
