@@ -1,3 +1,7 @@
+2013-06-05  Jiyou Park
+
+        * Evas: Fix gif cannot decode alpha value correctly.
+
 2013-06-04  Jean-Philippe Andre
 
 	* Evas: improve stability of Evas_Cserve2.
